# find_pair

./: .clang-format  .clangd  .cursorignore  .cursorrules  .gitignore  3CME_EDGE_CASE_ANALYSIS.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CLEANUP_AND_RESTRUCTURE_PLAN.md  CLEANUP_COMPLETE.md  CLEANUP_FINAL_SUMMARY.md  CLEANUP_PLAN_FILES.md  CLEANUP_SUMMARY.md  CLEANUP_VERIFICATION.md  CMakeLists.txt  COMMIT_GUIDE.md  COMPARISON_SUMMARY.md  CORE_OBJECTS_CLEANUP_PLAN.md  HELICAL_PARAMS_VERIFICATION.md  IMMEDIATE_ACTIONS.md  IMPLEMENTATION_PLAN.md  INVESTIGATION_7EH2.md  INVESTIGATION_COMPLETE_SUMMARY.md  INVESTIGATION_ROOT_CAUSE.md  LARGE_SWEEP_RESULTS.md  MODERNIZATION_STATUS.md  MODERN_MISSES_ANALYSIS.md  MODIFIED_NUCLEOTIDES_FIX_COMPLETE.txt  Makefile  NEXT_CHAT_TODO.md  NEXT_STEPS.md  OUTPUT_COMPARISON.md  PARAMETER_DIFFERENCES_ANALYSIS.md  PARAMETER_MATCHING_SUMMARY.md  PROJECT_COMPLETE.md  PROTOCOLS_COMPLETE.md  PROTOCOLS_IMPLEMENTATION_STATUS.md  PROTOCOLS_READY_TO_COMMIT.md  README.md  REFACTORING_PLAN.md  (+17 more)
apps/: analyze_app.cpp  find_pair_app.cpp
cmake/: Dependencies.cmake  generate_parameters.py  x3dnaConfig.cmake.in
data/: all_pair_differences.csv  atoms_test_results.json  batch_results.csv  bp_database.txt  cif_donors_chain.json  fast_pdbs.txt  fast_subset.json  frames_test_results.json  index_mismatch_report.csv  index_validation_status.csv  json_generation_helical_progress.json  json_generation_progress.json  ls_fitting_failures.json  missing_frame_pdbs.txt  missing_pdbs.txt  modified_residues.json  pair_differences.csv  pdb_list.txt  pdbs_passing_stage5.json  residue_indices_test_results.json  slow_pdbs.json  slow_pdbs_legacy_regen.json  slow_pdbs_pairs_validation.json  slow_pdbs_stage_validation.json  slow_pdbs_validation_progress.json  stage2_exclusions.json  stage3_exclusions.json  stage6_failures.json  stage6_progress.json  step_param_verification.csv  templates  test_set_100_list.txt  valid_pdbs.json  valid_pdbs_fast.json  valid_pdbs_stage6_7.json  validation_checkpoint_stage11_12.json  verification_results.csv  verification_results.json
docs/: 100_PERCENT_MATCH_STATUS.md  ALGORITHM_CRITICAL_GUIDE.md  ATOM_INDEX_CONVERSION_FIX.md  BP_TYPE_ID_INVESTIGATION_SUMMARY.md  BP_TYPE_ID_REQUIREMENTS.md  BROAD_TESTING_RESULTS.md  BUILD_INSTRUCTIONS.md  CACHE_REMOVAL.md  CLEAN_SLATE_VALIDATION_PLAN.md  CODE_FLOW.md  COMPARISON_CONFIG.md  COMPARISON_COVERAGE.md  COMPARISON_IMPROVEMENT_PLAN.md  COMPARISON_INDEX_RULES.md  COMPARISON_QUICK_GUIDE.md  COMPARISON_STATUS.md  COMPARISON_WORKFLOW.md  CURRENT_STATUS_SUMMARY.md  CURRENT_VALIDATION_STATUS.md  DATA_STRUCTURE.md  DIFFERENCES_SUMMARY.md  EMBEDDING.md  EXECUTION_CHECKLIST.md  FIX_INDICES_OPTION.md  FRAME_VALIDATION_STATUS.md  HBOND_ADVANCED_FEATURES_PLAN.md  HBOND_DETECTION_SURVEY.md  HBOND_DSSR_COMPARISON.md  HBOND_OPTIMIZER_STATUS.md  HBOND_STRATEGIES_SURVEY.md  HYDROGEN_BOND_REFACTOR_PLAN.md  IMPLEMENTATION_PLAN.md  INDEX_VALIDATION_REPORT.md  JSON_DATA_TYPES_AND_COMPARISONS.md  JSON_SERIALIZATION.md  KNOWN_FRAME_EDGE_CASES.md  LEGACY_INDEX_STRATEGY.md  LEGACY_INDICES_GUIDE.md  LEGACY_JSON_GENERATION.md  LEGACY_ORDER_FIXES.md  (+63 more)
examples/: CMakeLists.txt  simple_analysis.cpp
org/: ADD_DEBUG_TO_OUR_CODE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  CODEBASE_ANALYSIS.md  COMBINED_EXECUTABLE.md  COMPARISON_SCRIPT.sh  DEBUGGING_CHECKLIST.md  DEBUGGING_PLAN.md  README.md  SETUP_COMPLETE.md  STATUS.md  col_chains.scr  col_helices.scr  compare_debug_output.py  run_debug.sh  test_debug.txt  test_run.sh
org/include/: json_writer.h  x3dna.h  x3dna_fncs.h
org/src/: ana_fncs.c  analyze.c  app_fncs.c  cmn_fncs.c  find_pair.c  find_pair_analyze.c  fncs_slre.c  generate_residue_ordering_json.c  json_writer.c  nrutil.c  test_donor_acceptor.c  test_hbond_conflict.c  test_hbond_conflict_debug.c  test_hbond_detection.c  test_hbond_initial.c  test_hbond_validation.c  test_n3_n2_debug.c
tests/: CMakeLists.txt  test_basic.cpp  test_fixtures.hpp  test_helpers.hpp  test_main.cpp
tests/integration/: CMakeLists.txt  analyze_frame_mismatches.cpp  check_failing_residues.cpp  compare_ls_fitting.cpp  debug_all_failures.cpp  debug_atom_matching.cpp  debug_frame_calculation.cpp  integration_test_base.hpp  investigate_failures.cpp  json_comparison.hpp  test_base_pair_integration.cpp  test_core_objects_integration.cpp  test_data_discovery.hpp  test_frame_calculation.cpp  test_frame_calculation_legacy.cpp  test_io_integration.cpp  test_json_generation.cpp  test_json_generation_filtered.cpp  test_least_squares_regression.cpp  test_pdb_atom_validation.cpp  test_problem_pdbs.cpp  test_protocols_integration.cpp  test_residue_ordering_json_comparison.cpp  test_residue_ordering_multiple_pdbs.cpp  test_single_pdb.cpp  test_specific_problem_pdbs.cpp
tests/regression/: CMakeLists.txt
tests/unit/: CMakeLists.txt
tests/unit/algorithms/: CMakeLists.txt  test_base_frame_calculator.cpp  test_base_frame_calculator_poly.cpp  test_base_pair_finder.cpp  test_base_pair_finder_poly.cpp  test_base_pair_validator.cpp  test_base_pair_validator_poly.cpp  test_chain_detector.cpp  test_pair_candidate_cache.cpp  test_residue_index_map.cpp  test_ring_atom_matcher.cpp  test_role_classifier.cpp  test_slot_optimizer.cpp  test_standard_base_templates.cpp
tests/unit/config/: CMakeLists.txt  test_config_manager.cpp  test_hbond_parameters.cpp  test_init_api.cpp  test_resource_locator.cpp
tests/unit/core/: CMakeLists.txt  test_atom.cpp  test_base_pair.cpp  test_chain.cpp  test_chain_polymorphic.cpp  test_parameters.cpp  test_reference_frame.cpp  test_residue.cpp  test_residue_hierarchy.cpp  test_structure.cpp  test_structure_legacy_order.cpp  test_structure_polymorphic.cpp
tests/unit/geometry/: CMakeLists.txt  test_least_squares_fitter.cpp  test_matrix3d.cpp  test_vector3d.cpp
tests/unit/io/: CMakeLists.txt  test_cif_parser.cpp  test_input_file_parser.cpp  test_json_reader.cpp  test_json_writer.cpp  test_pdb_parser.cpp  test_pdb_parser_poly.cpp  test_pdb_writer.cpp
tests/unit/protocols/: CMakeLists.txt  test_find_pair_protocol.cpp  test_protocol_base.cpp
(+1207 files in other folders)
