[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x3dna_json_compare"
version = "1.0.0"
description = "Comparison utilities for X3DNA legacy and modern JSON outputs"
readme = "x3dna_json_compare/README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]
authors = [
    {name = "X3DNA Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=22.0",
    "flake8>=5.0",
]

[tool.setuptools]
packages = ["x3dna_json_compare"]

