[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "x3dna_json_compare"
version = "1.0.0"
description = "Comparison utilities for X3DNA legacy and modern JSON outputs"
readme = "x3dna_json_compare/README.md"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
]
authors = [
    {name = "X3DNA Project"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "black>=22.0",
    "flake8>=5.0",
]

[project.scripts]
fp2-validate = "x3dna_json_compare.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests_python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "integration: Integration tests that require executables and data files",
    "slow: Tests that take a long time to run",
    "requires_legacy: Tests that require legacy executable",
    "requires_modern: Tests that require modern executable",
]
timeout = 300
timeout_method = "thread"

[tool.setuptools]
packages = ["x3dna_json_compare"]

